# BoARIO

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CITATION.cff  CONTRIBUTING.rst  Makefile  README.md  README.rst  boario-api-reference.html  boario-events.html  boario-installation.html  boario-math.html  boario-quickstart.html  boario-references.html  boario-terminology.html  boario-what-is.html  development.html  environment.yml  genindex.html  index.html  make.bat  objects.inv  paper.bib  paper.md  pkg-requirements.txt  py-modindex.html  pyproject.toml  release-note.html  requirements.txt  search.html  searchindex.js  setup.py  test-requirements.txt  user-guide.html
.doctrees/: boario-api-reference.doctree  boario-events.doctree  boario-installation.doctree  boario-math.doctree  boario-quickstart.doctree  boario-references.doctree  boario-terminology.doctree  boario-what-is.doctree  development.doctree  index.doctree  release-note.doctree  user-guide.doctree
.doctrees/autoapi/: boario.doctree  boario.event.doctree  boario.extended_models.doctree  boario.indicators.doctree  boario.model_base.doctree  boario.simulation.doctree
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation-request.md  model-feature-request.md
.github/workflows/: CI.yml  black.yml  documentation.yaml  draft-pdf.yml  gitlabsync.yml  static_html_deploy.yml
JupyNotebooks/: BoARIO-Full-Test.ipynb  DashBootstrapInterface.ipynb  Results_exploring.ipynb  Tutorial.ipynb  boario_test.ipynb  model_testing.ipynb  small_mrio_testing.ipynb
_sources/: boario-installation.rst.txt  boario-math.rst.txt  index.rst.txt
_sources/autoapi/: boario.indicators.rst.txt  boario.rst.txt
_static/: copybutton.js
api-examples/simulation/: example-read_events_from_list.rstinc
ario3/: __init__.py  event.py  indicators.py  logging_conf.py  mriosystem.py  simulation.py
ario3/event/: __init__.py  event.py
ario3/indicators/: __init__.py  indicators.py
ario3/mrio/: __init__.py  fast.py  mrio_module.py  system.py
ario3/simulation/: __init__.py  base.py  simulation.py
ario3/test/: .#__init__.py  test_mrio_sys.py
ario3/utils/: logger.py
autoapi/: boario.event.html  boario.extended_models.html  boario.html  boario.indicators.html  boario.model_base.html  boario.simulation.html
boario/: __init__.py  config.py  default.conf  event.py  extended_models.py  indicators.py  logging_conf.py  model_base.py  mriosystem.py  requirements.txt  simulation.py
boario/utils/: misc.py  pymutils.py  recovery_functions.py
dash_interface/: renderers.py
docs/: Makefile
docs/source/: boario-api-reference.rst  boario-events.rst  boario-installation.rst  boario-math.rst  boario-quickstart.rst  boario-references.rst  boario-terminology.rst  boario-tutorials.rst  boario-what-is.rst  build_docs.py  conf.py  development.rst  getting-started.rst  index.rst  math.tex  notation_table.rstinc  refs.bib  release-note.rst  user-guide.rst  version.yaml  versions.yaml
docs/source/_autosummary/: boario.event.Event.rst  boario.event.EventArbitraryProd.rst  boario.event.EventKapitalDestroyed.rst  boario.event.EventKapitalRebuild.rst  boario.event.EventKapitalRecover.rst  boario.event.rst  boario.extended_models.ARIOPsiModel.rst  boario.extended_models.rst  boario.model_base.ARIOBaseModel.rst  boario.model_base.rst  boario.rst  boario.simulation.EventTracker.rst  boario.simulation.Simulation.rst  boario.simulation.rst
docs/source/_build/linkcheck/: output.json
docs/source/_build/linkcheck/.doctrees/: api_references.doctree  boario-events.doctree  (+7 more)
docs/source/_static/: switcher.json
docs/source/_static/css/: custom.css
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/_templates/autoapi/: module.rst
docs/source/auto/: boario.event.rst  boario.extended_models.rst  boario.model_base.rst  boario.rst  math.el  refs.el
docs/source/autoapi/: boario.event.rst  boario.rst
docs/source/notebooks/: boario-quickstart.ipynb
docs/source/tex-sources/: myionotations.tex
docs/source/tutorials/: .#mriot-input.rst  boario-events.rst  model-params.rst  model-type.rst  monetary-factors.rst  mriot-input.rst  simulation-context.rst
gh-pages/source/: terminology.rst
gh-pages/source/api-doc/: ario3.rst
master/: pyrightconfig.json
master/ario3/: simulation.py
master/ario3/test/: test_mrio_sys.py
master/ario3/utils/: misc.py
master/dash_interface/: appfile.py  defaults.py  layouts.py  utils.py
other/: 133_74_sector_aggregation_exiobase3.ods  133_7_sector_aggregation_exiobase3.ods  Dash-Test.py  aggreg EXIO.ods  event_template.json  event_test_20220202.json  exio3_aggreg_sectors_20220202-102727.json  exiobase3_7_sectors_params.ods  exiobase3_aggregate_to_7_sectors.ods  integration_test.py  japan_aggreg.json  params_test_20220202.json  sector_regions idxs.ods  sector_renaming_7.json  sector_renaming_74.json
scripts/: aggreg_exio3.py  csv_from_indicators.py  flood_country_aggreg.py  generate-example-files.py  indicator_from_folder.py  indicators_batch.py  mono_run.py  mono_run_2.py  mono_run_dmg.py  other_indicators.py  quick_model_test.py  run_2.py  uniq_country_model.py
source/: conf.py  index.rst
source/api-doc/: ario3.test.rst  modules.rst
src/docs/: Makefile
src/docs/source/: api_references.rst  boario-events.rst  boario-installation.rst  boario-math.rst  boario-mrio-params.rst  boario-quickstart.rst  boario-sim-params.rst  conf.py  index.rst  installation.rst  math.rst  release-note.rst  terminology.rst  user-guide.rst
src/docs/source/api-doc/: ario3.event.rst  ario3.indicators.rst  ario3.logging_conf.rst  ario3.mriosystem.rst  ario3.rst  ario3.simulation.rst  boario.event.rst  boario.extended_models.rst  boario.indicators.rst  boario.logging_conf.rst  boario.model_base.rst  boario.mriosystem.rst  boario.rst  boario.simulation.rst  modules.rst
src/docs/source/tex-sources/: myionotations.tex
tests/: integration.py  test_events.py  test_integration.py  test_misc.py  test_models.py  test_simulation.py
workflow/: Snakefile
(+7 files in other folders)
