[tool.poetry]
name = "boario"
version = "0.5.0a"
description = "BoARIO : The Adaptative Regional Input Output model in python."
authors = ["Samuel Juhel <pro@sjuhel.org>"]
license = "GNU General Public License v3 or later (GPLv3+)"
readme = "README.rst"

[tool.poetry.dependencies]
python=">=3.9,^3.10"
coloredlogs = "^15.0.1"
country-converter = "^1.0.0"
dask = ">=2023"
numpy = "<1.24"
numpyencoder = "^0.3.0"
odfpy = "^1.4.1"
pandas = ">=1.5,<2.0"
progressbar2 = "^4.2.0"
pyarrow = "^11.0.0"
pymrio = "^0.4.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pygit2 = "^1.12.1"
ipykernel = "^6.23.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
keywords = [
    "ario",
    "economics",
    "events",
    "extreme",
    "impact",
    "indirect",
    "input-output",
    "modeling",
    "mrio",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Bug Reports" = "https://github.com/spjuhel/BoARIO/issues"
Documentation = "https://spjuhel.github.io/BoARIO/index.html"
Homepage = "https://github.com/spjuhel/BoARIO"
Source = "https://github.com/spjuhel/BoARIO/"

[tool.pyright]
include = ["boario","scripts"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/",
    "api-examples",
    "docs/",
    "dist/",
    "imgs/",
    "other/",
    "tests/",
    "dist/"
]

defineConstant = { DEBUG = true }
stubPath = "boario/stubs"