[tool.poetry]
name = "boario"
version = "0.5.10"
description = "BoARIO : The Adaptative Regional Input Output model in python."
authors = ["Samuel Juhel <pro@sjuhel.org>"]
license = "GNU General Public License v3 or later (GPLv3+)"
readme = "README.rst"

[tool.poetry.dependencies]
python=">=3.9,<4.0"
coloredlogs = "^15.0.1"
country-converter = "^1.0.0"
dask = ">=2023"
numpy = "<1.27"
odfpy = "^1.4.1"
pandas = ">=1.5"
progressbar2 = "^4.2.0"
pyarrow = ">=11"
pymrio = ">=0.4"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<9.0.0"
pygit2 = "^1.12.1"
ipykernel = "^6.23.0"
black = ">=23.3,<25.0"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-autoapi = ">=2.1,<4.0"
sphinx-automodapi = "^0.15.0"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = ">=0.13.3,<0.16.0"
nbsphinx = "^0.9.2"
pytest-cov = ">=4.1,<6.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
safety = "^3.0.1"
pydoclint = "^0.4.1"
autoapi = "^2.0.1"
sphinx-autodoc-typehints = "^2.0.0"
numpydoc = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
keywords = [
    "ario",
    "economics",
    "events",
    "extreme",
    "impact",
    "indirect",
    "input-output",
    "modeling",
    "mrio",
]
name = "boario"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Bug Reports" = "https://github.com/spjuhel/BoARIO/issues"
Documentation = "https://spjuhel.github.io/BoARIO/index.html"
Homepage = "https://github.com/spjuhel/BoARIO"
Source = "https://github.com/spjuhel/BoARIO/"

[tool.pyright]
include = ["boario","scripts"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/",
    "api-examples",
    "docs/",
    "dist/",
    "imgs/",
    "other/",
    "tests/",
    "dist/"
]

[tool.flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore = ['E501','E203']


defineConstant = { DEBUG = true }
stubPath = "boario/stubs"